# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//foundation/distributedhardware/mechbody_controller/mechbody.gni")

group("fuzztest") {
  testonly = true

  deps = [
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/blesendmanagerone_fuzzer:BleSendManagerOneFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/blesendmanagertwo_fuzzer:BleSendManagerTwoFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/blesendmanagerthree_fuzzer:BleSendManagerThreeFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/bluetoothstateadapter_fuzzer:BluetoothStateAdapterFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/bluetoothstatelistener_fuzzer:BluetoothStateListenerFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcconnectmanager_fuzzer:McConnectManagerFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcmotionmanager_fuzzer:McMotionManagerFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mccameratrackingcontroller_fuzzer:McCameraTrackingControllerFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mccontrolleripcdeathlistener_fuzzer:McControllerIpcDeathListenerFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mccontrollermanager_fuzzer:McControllerManagerFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerserviceone_fuzzer:MechBodyControllerServiceOneFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerservicetwo_fuzzer:MechBodyControllerServiceTwoFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerservicethree_fuzzer:MechBodyControllerServiceThreeFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerservicefour_fuzzer:MechBodyControllerServiceFourFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerservicefive_fuzzer:MechBodyControllerServiceFiveFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerservicesix_fuzzer:MechBodyControllerServiceSixFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerstubone_fuzzer:MechBodyControllerStubOneFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerstubtwo_fuzzer:MechBodyControllerStubTwoFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerstubthree_fuzzer:MechBodyControllerStubThreeFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerstubfour_fuzzer:MechBodyControllerStubFourFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerstubfive_fuzzer:MechBodyControllerStubFiveFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerutils_fuzzer:MechBodyControllerUtilsFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalgetmechbaseinfocmd_fuzzer:NormalGetMechBaseInfoCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalgetmechcapabilityinfocmd_fuzzer:NormalGetMechCapabilityInfoCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalgetmechcoordinateinfocmd_fuzzer:NormalGetMechCoordinateInfoCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalgetmechlimitinfo_fuzzer:NormalGetMechLimitInfoFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalgetmechposeinfo_fuzzer:NormalGetMechPoseInfoFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalgetmechstateinfo_fuzzer:NormalGetMechStateInfoFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalregistermechgenericeventcmd_fuzzer:NormalRegisterMechGenericEventCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalregistermechkeyeventcmd_fuzzer:NormalRegisterMechKeyEventCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalregistermechpositioninfocmd_fuzzer:NormalRegisterMechPositionInfoCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalregistermechstateinfocmd_fuzzer:NormalRegisterMechStateInfoCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalregistermechtrackingenablecmd_fuzzer:NormalRegisterMechTrackingEnableCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalsetmechcamerainfocmd_fuzzer:NormalSetMechCameraInfoCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalsetmechcameratrackingenablecmd_fuzzer:NormalSetMechCameraTrackingEnableCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalsetmechcameratrackingframecmd_fuzzer:NormalSetMechCameraTrackingFrameCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalsetmechlocationreportcmd_fuzzer:NormalSetMechLocationReportCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalsetmechmotioncontrolcmd_fuzzer:NormalSetMechMotionControlCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcdatabuffer_fuzzer:McDataBufferFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcprotocolconvertor_fuzzer:McProtocolConvertorFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcsubscriptioncenter_fuzzer:McSubscriptionCenterFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcregistermechcliffinfocmd_fuzzer:McRegisterMechCliffInfoCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcregistermechobstacleinfocmd_fuzzer:McRegisterMechObstacleInfoCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcwheelgetmechcapabilityinfocmd_fuzzer:McWheelGetMechCapabilityInfoCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcwheelsetmechmotioncontrolcmd_fuzzer:McWheelSetMechMotionControlCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcwheelsetmechrelativepositioncmd_fuzzer:McWheelSetMechRelativePositionCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcwheelsetmechrotationtobasecmd_fuzzer:McWheelSetMechRotationToBaseCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcwheelsetmechrotationtracecmd_fuzzer:McWheelSetMechRotationTraceCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcwheelsetmechscenecontrolcmd_fuzzer:McWheelSetMechSceneControlCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcnormalsetmechphonestatuscmd_fuzzer:McNormalSetMechPhoneStatusCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcnormalsetmechprotocolvercmd_fuzzer:McNormalSetMechProtocolVerCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcnormalsetmechrotationbyspeedcmd_fuzzer:McNormalSetMechRotationBySpeedCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcnormalsetmechrotationtolocationcmd_fuzzer:McNormalSetMechRotationToLocationCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcnormalsetmechrotationtracecmd_fuzzer:McNormalSetMechRotationTraceCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mccommandbase_fuzzer:McCommandBaseFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mccommandfactory_fuzzer:McCommandFactoryFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcgetmechprotocolvercmd_fuzzer:McGetMechProtocolVerCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcsetmechdisconnectcmd_fuzzer:McSetMechDisconnectCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcactiongimbalfeaturecontrolcmd_fuzzer:McActionGimbalFeatureControlCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcgetmechcameratrackinglayoutcmd_fuzzer:MCGetMechCameraTrackingLayoutCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcsetmechrotationcmd_fuzzer:McSetMechRotationCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcsetmechrotationbyspeedcmd_fuzzer:McSetMechRotationBySpeedCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcsetmechstopcmd_fuzzer:McSetMechStopCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcgetmechlimitinfocmd_fuzzer:MCGetMechLimitInfoCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcgetmechrealnamecmd_fuzzer:MCGetMechRealNameCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcregistermechcamerakeyeventcmd_fuzzer:MCRegisterMechCameraKeyEventCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcregistermechcontrolresultcmd_fuzzer:MCRegisterMechControlResultCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcregistermechpositioninfocmd_fuzzer:MCRegisterMechPositionInfoCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/registermechstateinfocmd_fuzzer:RegisterMechStateInfoCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/registermechtrackingenablecmd_fuzzer:RegisterMechTrackingEnableCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/registermechwheeldatacmd_fuzzer:RegisterMechWheelDataCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/setmechcamerainfocmd_fuzzer:SetMechCameraInfoCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/setmechcameratrackingenablecmd_fuzzer:SetMechCameraTrackingEnableCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/setmechcameratrackingframecmd_fuzzer:SetMechCameraTrackingFrameCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/setmechcameratrackinglayoutcmd_fuzzer:SetMechCameraTrackingLayoutCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/setmechconfigcmd_fuzzer:SetMechConfigCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/setmechhidpreemptivecmd_fuzzer:SetMechHidPreemptiveCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/setmechrotationtracecmd_fuzzer:SetMechRotationTraceCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mccommandbase_fuzzer:McCommandBaseFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mccommandfactory_fuzzer:McCommandFactoryFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcsendadapter_fuzzer:McSendAdapterFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcgetmechprotocolvercmd_fuzzer:McGetMechProtocolVerCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcsetmechdevicepairinginfocmd_fuzzer:McSetMechDevicePairingInfoCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcsetmechdisconnectcmd_fuzzer:McSetMechDisconnectCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/jsmechmanager_fuzzer:JsMechManagerFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechmanagerinner_fuzzer:MechManagerInnerFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalsetmechrotationbyspeedcmd_fuzzer:NormalSetMechRotationBySpeedCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalsetmechrotationtolocationcmd_fuzzer:NormalSetMechRotationToLocationCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalsetmechrotationtracecmd_fuzzer:NormalSetMechRotationTraceCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalsetmechphonestatuscmd_fuzzer:NormalSetMechPhoneStatusCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalsetmechprotocolvercmd_fuzzer:NormalSetMechProtocolVerCmdFuzzTest",
  ]
}