import("//build/test.gni")
import("//foundation/distributedhardware/mechbody_controller/mechbody.gni")

##############################  Fuzztest  ##################################
ohos_fuzztest("McCameraTrackingControllerFuzzTest") {
  module_out_path = "mechbody_controller/mechbody_controller/"

  fuzz_config_file =
      "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mccameratrackingcontroller_fuzzer"

  include_dirs = [
    "//foundation/distributedhardware/mechbody_controller/services/include",
    "//foundation/distributedhardware/mechbody_controller/services/include/dotReport",
    "//foundation/distributedhardware/mechbody_controller/services/include/connect",
    "//foundation/distributedhardware/mechbody_controller/services/include/controller",
    "//foundation/distributedhardware/mechbody_controller/services/include/motion",
    "//foundation/distributedhardware/mechbody_controller/services/include/transport",
    "//foundation/distributedhardware/mechbody_controller/services/include/transport/command",
    "//foundation/distributedhardware/mechbody_controller/services/include/transport/command/0x01",
    "//foundation/distributedhardware/mechbody_controller/services/include/transport/command/0x02",
    "//foundation/distributedhardware/mechbody_controller/services/include/transport/command/0x03",
    "//foundation/distributedhardware/mechbody_controller/interface/napi/mech_manager",
    "//foundation/distributedhardware/mechbody_controller/services/include/utils",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [
    "//foundation/distributedhardware/mechbody_controller/services/src/connect/bluetooth_state_adapter.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/connect/bluetooth_state_listener.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/connect/mc_connect_manager.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/controller/mc_camera_tracking_controller.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/controller/mc_controller_ipc_death_listener.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/controller/mc_controller_manager.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/mc_send_adapter.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/mechbody_controller_service.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/mechbody_controller_stub.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/mechbody_controller_utils.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/motion/mc_motion_manager.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/mc_command_base.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/mc_command_factory.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/mc_get_mech_protocol_ver_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/mc_set_mech_disconnect_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/mc_data_buffer.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/mc_protocol_convertor.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/mc_subscription_center.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/ble_send_manager.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/utils/load_mechbody_adapter.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/dotReport/hisysevent_utils.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/utils/subscribe_event_utils.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x01/mc_action_gimbal_feature_control_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x01/mc_get_mech_camera_tracking_layout_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x01/mc_get_mech_limit_info_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x01/mc_get_mech_real_name_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x01/mc_register_mech_camera_key_event_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x01/mc_register_mech_control_result_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x01/mc_register_mech_position_info_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x01/mc_register_mech_state_info_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x01/mc_register_mech_tracking_enable_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x01/mc_register_mech_wheel_data_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x01/mc_set_mech_camera_info_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x01/mc_set_mech_camera_tracking_enable_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x01/mc_set_mech_camera_tracking_frame_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x01/mc_set_mech_camera_tracking_layout_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x01/mc_set_mech_config_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x01/mc_set_mech_hid_preemptive_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x01/mc_set_mech_rotation_by_speed_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x01/mc_set_mech_rotation_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x01/mc_set_mech_rotation_trace_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x01/mc_set_mech_stop_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x02/mc_normal_get_mech_base_info_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x02/mc_normal_get_mech_capability_info_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x02/mc_normal_get_mech_coordinate_info_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x02/mc_normal_get_mech_limit_info_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x02/mc_normal_get_mech_pose_info_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x02/mc_normal_get_mech_state_info_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x02/mc_normal_register_mech_generic_event_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x02/mc_normal_register_mech_key_event_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x02/mc_normal_register_mech_position_info_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x02/mc_normal_register_mech_state_info_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x02/mc_normal_register_mech_tracking_enable_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x02/mc_normal_set_mech_camera_info_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x02/mc_normal_set_mech_camera_tracking_enable_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x02/mc_normal_set_mech_camera_tracking_frame_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x02/mc_normal_set_mech_location_report_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x02/mc_normal_set_mech_motion_control_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x02/mc_normal_set_mech_rotation_by_speed_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x02/mc_normal_set_mech_rotation_to_location_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x02/mc_normal_set_mech_protocol_ver_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x02/mc_normal_set_mech_rotation_trace_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x02/mc_normal_set_mech_phone_status_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x03/mc_wheel_get_mech_capability_info_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x03/mc_wheel_set_mech_rotation_to_base_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x03/mc_wheel_set_mech_rotation_trace_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x03/mc_wheel_set_mech_motion_control_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x03/mc_wheel_set_mech_scene_control_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x03/mc_wheel_set_mech_relative_position_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x03/mc_register_mech_cliff_info_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/services/src/transport/command/0x03/mc_register_mech_obstacle_info_cmd.cpp",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mccameratrackingcontroller_fuzzer/mccameratrackingcontroller_fuzzer.cpp",
  ]

  deps = [
    "//foundation/distributedhardware/mechbody_controller/services:mechbody_service",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtokenid_sdk",
    "access_token:libtoken_setproc",
    "bluetooth:btframework",
    "bluetooth:btcommon",
    "camera_framework:camera_framework",
    "drivers_interface_camera:metadata",
    "cJSON:cjson_static",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "graphic_surface:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "input:libmmi-client",
    "input:oh_input_manager",
    "ipc:ipc_single",
    "os_account:libaccountkits",
    "os_account:os_account_innerkits",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "sensor:sensor_interface_native",
    "window_manager:libdm_lite",
    "hisysevent:libhisysevent",
    "distributed_notification_service:ans_innerkits",
    "resource_management:global_resmgr",
    "ability_runtime:ability_manager",
    "ability_runtime:app_manager",
  ]
}

group("fuzztest") {
  testonly = true
  deps = [ ":McCameraTrackingControllerFuzzTest" ]
}